--- a/FitnessTracker.V1/Pages/MonProfil.razor
+++ b/FitnessTracker.V1/Pages/MonProfil.razor
@@ -37,6 +37,12 @@ else
                     <option value="Debutant">Débutant</option>
                     <option value="Intermediaire">Intermédiaire</option>
                     <option value="Avance">Avancé</option>
+                    
+                    Fat_loss,
+                    Yoga,
+                    Mobility,
+                    Pilates,
+                    Strength
                 </InputSelect>
             </div>
 
@@ -46,6 +52,11 @@ else
                     <option value="Force">Force</option>
                     <option value="Endurance">Endurance</option>
                     <option value="Hypertrophy">Hypertrophie</option>
+                    <option value="Fat_loss">Perte de poids</option>
+                    <option value="Yoga">Yoga</option>
+                    <option value="Mobility">Mobility</option>
+                    <option value="Pilates">Pilates</option>
+                    <option value="Strength">Strength</option>
                 </InputSelect>
             </div>
 
