--- a/FitnessTracker.V1/Pages/MonProfil.razor
+++ b/FitnessTracker.V1/Pages/MonProfil.razor
@@ -53,10 +53,12 @@ else
                     <option value="Endurance">Endurance</option>
                     <option value="Hypertrophy">Hypertrophie</option>
                     <option value="Fat_loss">Perte de poids</option>
-                    <option value="Yoga">Yoga</option>
+                  @*   <option value="Yoga">Yoga</option> *@
                     <option value="Mobility">Mobility</option>
-                    <option value="Pilates">Pilates</option>
+                    @* <option value="Pilates">Pilates</option> *@
                     <option value="Strength">Strength</option>
+                    <option value="Glutes">Glutes</option>
+                    <option value="Calistenie">Calistenie</option>
                 </InputSelect>
             </div>
 
