--- a/FitnessTracker.V1/_Imports.razor
+++ b/FitnessTracker.V1/_Imports.razor
@@ -12,5 +12,9 @@
 @using FitnessTracker.V1.Services.ProgrammeGeneration
 @using FitnessTracker.V1.Services
 
+@using BlazorBootstrap
+@using FitnessTracker.V1.Components
+@using System.Drawing
+
 @using System.Text.Json
 @using static FitnessTracker.V1.Models.Model
